@@ -1,9 +1,9 @@
 package appeng.client.gui.me.search;
 
+import appeng.menu.me.common.GridInventoryEntry;
+
 import java.util.List;
 import java.util.function.Predicate;
-
-import appeng.menu.me.common.GridInventoryEntry;
 
 final class OrSearchPredicate implements Predicate<GridInventoryEntry> {
     private final List<Predicate<GridInventoryEntry>> terms;
@@ -17,7 +17,7 @@ final class OrSearchPredicate implements Predicate<GridInventoryEntry> {
             return t -> false;
         }
         if (filters.size() == 1) {
-            return filters.get(0);
+            return filters.getFirst();
         }
         return new OrSearchPredicate(filters);
     }
